--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -129,3 +129,12 @@ sop.service.exclude=your-serviceId1,your-serviceId2
 # 多个正则用英文分号(;)隔开
 sop.service.exclude-regex=test\\-.*
 ```
+
+## ISV公私钥 & 平台公私钥
+
+```java
+ISV私钥（必须）：ISV保存，用来生成签名 --> ISV公钥（必须）：平台保存，用来校验签名是否正确
+平台私钥（非必须）：平台保存，对返回结果生成签名 --> 平台公钥（非必须）：ISV保存，用来校验签名是否正确
+```
+
+总结：私钥负责加密生成签名，公钥负责校验签名是否正确
