兼容注册中心配置

--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -103,7 +103,7 @@ yml添加：
 ribbon.ReadTimeout: 60000
 ```
 
-## 指定了context-path
+## 指定了context-path（拉取路由404）
 
 微服务项目定义了`server.servlet.context-path=/story-service`，同时必须指定：
 
