--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -108,7 +108,18 @@ ribbon.ReadTimeout: 60000
 微服务项目定义了`server.servlet.context-path=/story-service`，同时必须指定：
 
 ```properties
-spring.cloud.nacos.discovery.metadata.server.servlet.context-path=${server.servlet.context-path}
+spring.cloud.nacos.discovery.metadata.context-path=${server.servlet.context-path}
+```
+
+yml配置如下：
+
+```yaml
+spring:
+  cloud:
+    nacos:
+      discovery:
+        metadata:
+          context-path: ${server.servlet.context-path}
 ```
 
 不然网关无法拉取路由信息
