--- a/doc/docs/files/10110_预发布灰度发布.md
+++ b/doc/docs/files/10110_预发布灰度发布.md
@@ -11,7 +11,7 @@
 |open1.domain.com  |网关服务器1  |
 |openpre.domain.com | 网关服务器2，作为预发布请求入口|
 
-线上网关入口为`http://open.domain.com/api`，请求网关`http://open.domain.com/api`会负载均衡到这两台服务器
+线上网关入口为`http://open.domain.com/`，请求网关`http://open.domain.com/`会负载均衡到这两台服务器
 
 SOP开启预发布步骤如下：
 
@@ -26,18 +26,16 @@ pre.domain=openpre.domain.com
 微服务启动参数添加：`--spring.cloud.nacos.discovery.metadata.env=pre`（eureka下是：`--eureka.instance.metadata-map.env=pre`）。
 建议线上配两套启动脚本，其中预发布启动脚本添加启动参数`--eureka.instance.metadata-map.env=pre`
 
-登录SOP-Admin，在服务列表中点击预发布，然后预发布请求地址变成：`http://openpre.domain.com/api`。
+登录SOP-Admin，在服务列表中点击预发布，然后预发布请求地址变成：`http://openpre.domain.com/`。
 从`openpre.domain.com`请求进来的用户都会进预发布服务器，其它情况都走非预发布服务器。
 
 ## 使用灰度发布
 
 灰度发布可允许指定的用户访问灰度服务器，其它用户还是走正常流程。
 
-微服务启动参数添加：`--spring.cloud.nacos.discovery.metadata.env=gray`（eureka下是：`--eureka.instance.metadata-map.env=gray`）。
+登录SOP-Admin，前往`服务列表`。
 
-登录SOP-Admin，前往服务列表。
-
-- 先设置灰度参数，指定灰度用户和灰度接口
+- 先设置灰度参数，指定灰度appId和灰度接口
 - 服务器实例开启灰度
 
 参考类：
