--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -3,7 +3,7 @@
 > 运行环境：JDK8，Maven3，[Nacos](https://nacos.io/zh-cn/docs/what-is-nacos.html)，Mysql
 
 - 安装并启动Nacos，[安装教程](https://nacos.io/zh-cn/docs/quick-start.html)
-- 执行Mysql脚本`sop.sql`
+- 执行Mysql脚本`sop.sql`(Mysql版本5.6+)，5.6以下运行`sop-mysql5.6以下版本.sql`
 - IDE安装lombok插件，然后打开项目(IDEA下可以打开根pom.xml，然后open as project)
 - 启动网关：打开sop-gateway下的`application-dev.properties`
     1. 修改数据库`username/password`
@@ -22,4 +22,12 @@
 
 登录账号：admin/123456
 
+## 启动文档中心
+
+文档中心代码在sop-website工程中
+
+- 确保注册中心、网关、微服务正常启动
+- 修改sop-website下的application-dev.properties相关配置
+- 运行WebsiteServerApplication.java
+- 访问http://localhost:8083
 
