--- a/doc/docs/files/10110_预发布灰度发布.md
+++ b/doc/docs/files/10110_预发布灰度发布.md
@@ -18,7 +18,7 @@ SOP开启预发布步骤如下：
 修改网关工程配置文件，指定预发布域名
 
 ```properties
-# 预发布网关域名
+# 预发布网关域名，多个用英文逗号（,）隔开
 pre.domain=openpre.domain.com
 ```
 重启网关
@@ -38,7 +38,18 @@ pre.domain=openpre.domain.com
 - 先设置灰度参数，指定灰度appId和灰度接口
 - 服务器实例开启灰度
 
+
 参考类：
 
-- PreEnvGrayFilter.java
-- EnvironmentServerChooser.java
+- SopLoadBalancerClient.java gateway网关下预发布/灰度服务选取
+- EnvironmentServerChooser.java  zuul网关下预发布/灰度服务选取
+
+### 自定义判断灰度用户
+
+默认根据`appId`和`IP`来判断灰度用户，如果要通过其它维度来判断是否是灰度用户，可实现GrayUserBuilder接口，
+然后在springboot main方法中调用如下方法
+
+```java
+ApiConfig.getInstance().addGrayUserBuilder(new XXGrayUserBuilder());
+```
+参考：com.gitee.sop.gatewaycommon.loadbalancer.builder.AppIdGrayUserBuilder.java
