--- a/doc/docs/files/90014_原理分析之预发布灰度发布.md
+++ b/doc/docs/files/90014_原理分析之预发布灰度发布.md
@@ -1,29 +1,22 @@
-package com.gitee.sop.gatewaycommon.loadbalancer;
+# 原理分析之预发布灰度发布
 
-import com.gitee.sop.gatewaycommon.bean.SopConstants;
-import com.gitee.sop.gatewaycommon.bean.SpringContext;
-import com.netflix.loadbalancer.ILoadBalancer;
-import com.netflix.loadbalancer.Server;
-import org.springframework.cloud.netflix.ribbon.DefaultServerIntrospector;
-import org.springframework.cloud.netflix.ribbon.ServerIntrospector;
-import org.springframework.cloud.netflix.ribbon.SpringClientFactory;
+SOP网关采用`自定义负载均衡策略`来实现对预发布/灰度发布服务器实例的选择。
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.function.Function;
-import java.util.function.Supplier;
+spring cloud gateway默认的负载均衡实现类在:`org.springframework.cloud.gateway.filter.LoadBalancerClientFilter.java`中
 
-/**
- * 预发布、灰度发布服务器选择
- *
- * @author tanghc
- */
-public abstract class LoadBalanceServerChooser<T, R> implements ServerChooserContext<T> {
+这个类主要做了几件事情：
 
-    private SpringClientFactory clientFactory;
+1. 解析出请求路径中的scheme
+2. 如果scheme不是以`lb`协议开头直接跳过
+3. 如果scheme以`lb`协议开头，则说明需要进行负载均衡，选出一台微服务实例
+4. 将`lb`协议解析成`http://ip:port`，继续向下请求
 
+其中第4步是由`org.springframework.cloud.netflix.ribbon.RibbonLoadBalancerClient`来完成的，
+我们只要分别继承`LoadBalancerClientFilter`和`RibbonLoadBalancerClient`，然后重写其中的方法就能完成自定义负载均衡。
+
+SOP中的重写类是：`SopLoadBalancerClientFilter`和`SopLoadBalancerClient`，核心代码委托给了`LoadBalanceServerChooser`处理，核心代码如下：
+
+```java
     /**
      * 选择服务器
      *
@@ -80,49 +73,20 @@ public abstract class LoadBalanceServerChooser<T, R> implements ServerChooserCon
         // 注意：这里允许走灰度服务器，如果不允许走，注释notPreServers.addAll(grayServers);这行
         return serverChooserFunction.apply(notPreServers);
     }
+```
 
-    protected Map<String, String> getMetadata(String serviceId, Server server) {
-        return serverIntrospector(serviceId).getMetadata(server);
-    }
+其业务逻辑如下：
 
-    protected SpringClientFactory getSpringClientFactory() {
-        if (clientFactory == null) {
-            clientFactory = SpringContext.getBean(SpringClientFactory.class);
-        }
-        return clientFactory;
-    }
+1. 选出`serviceId`对应的所有服务器实例
+2. 将服务器实例进行分类，分别放进`预发布List`，`灰度List`，`非预发布List`中
+3. 如果`预发布List`，`灰度List`都为空，表示没有开启任何预发/灰度服务，直接使用父类的负载均衡策略
+4. 如果是从预发布域名访问过来，则认为是预发布请求，选出预发服务器
+5. 如果是灰度请求，则认为是灰度用户，选出灰度服务器
+6. 最后剩下的是正常用户，正常用户不能走预发环境
 
-    public void setClientFactory(SpringClientFactory clientFactory) {
-        this.clientFactory = clientFactory;
-    }
+## 参考类
 
-    private ServerIntrospector serverIntrospector(String serviceId) {
-        ServerIntrospector serverIntrospector = getSpringClientFactory().getInstance(serviceId,
-                ServerIntrospector.class);
-        if (serverIntrospector == null) {
-            serverIntrospector = new DefaultServerIntrospector();
-        }
-        return serverIntrospector;
-    }
+- com.gitee.sop.gatewaycommon.gateway.filter.SopLoadBalancerClientFilter
+- com.gitee.sop.gatewaycommon.gateway.loadbalancer.SopLoadBalancerClient
+- com.gitee.sop.gatewaycommon.gateway.loadbalancer.GatewayLoadBalanceServerChooser
 
-    /**
-     * 是否是预发布服务器
-     *
-     * @param metadata metadata
-     * @return true：是
-     */
-    private boolean isPreServer(Map<String, String> metadata) {
-        return Objects.equals(metadata.get(SopConstants.METADATA_ENV_KEY), SopConstants.METADATA_ENV_PRE_VALUE);
-    }
-
-    /**
-     * 是否是灰度发布服务器
-     *
-     * @param metadata metadata
-     * @return true：是
-     */
-    private boolean isGrayServer(Map<String, String> metadata) {
-        return Objects.equals(metadata.get(SopConstants.METADATA_ENV_KEY), SopConstants.METADATA_ENV_GRAY_VALUE);
-    }
-
-}
