--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -31,3 +31,19 @@
 - 运行WebsiteServerApplication.java
 - 访问http://localhost:8083
 
+## 基本配置
+
+在`sop-gateway`下的application-dev.properties配置，各项配置说明如下
+
+```properties
+# 忽略验证，设置true，则所有接口不会进行签名校验，默认false
+sop.api-config.ignore-validate=false
+# 是否对结果进行合并，默认true
+sop.api-config.merge-result=true
+# 显示返回sign，默认true
+sop.api-config.show-return-sign=true
+# 是否开启限流功能，默认true
+sop.api-config.open-limit=true
+# 请求超时时间，默认5分钟，即允许在5分钟内重复请求，默认300
+sop.api-config.timeout-seconds=300
+```
