--- a/doc/docs/files/90999_网关性能测试.md
+++ b/doc/docs/files/90999_网关性能测试.md
@@ -7,9 +7,12 @@
 - 测试工具：[wrk](https://github.com/wg/wrk)，[安装教程](https://www.cnblogs.com/quanxiaoha/p/10661650.html)
 - 服务器：CentOS7（虚拟机，宿主机：macbookpro），内存：2G，CPU:1，核数：2核
 - 运行环境：Java8、Mysql-5.7、Nacos-1.1.3
-- 运行参数：`-verbose:gc -XX:+PrintGCDetails -XX:+PrintHeapAtGC -Xloggc:gc-zuul.log \
+- 运行参数：
+```
+-verbose:gc -XX:+PrintGCDetails -XX:+PrintHeapAtGC -Xloggc:gc-zuul.log \
       -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms1024m -Xmx1024m -Xmn512m -Xss256k -XX:SurvivorRatio=8\
-      -XX:+UseConcMarkSweepGC`
+      -XX:+UseConcMarkSweepGC
+```
 
 - zuul配置：
 
