--- a/doc/docs/files/10087_自定义返回结果.md
+++ b/doc/docs/files/10087_自定义返回结果.md
@@ -78,7 +78,7 @@ public class ZuulConfig extends AlipayZuulConfiguration {
 }
 ```
 
-**注**：网关设置了CustomDataNameBuilder后，SDK也要做相应的更改：`SdkConfig.dataNameBuilder = new CustomDataNameBuilder();`
+**注**：网关设置了CustomDataNameBuilder后，SDK也要做相应的更改：`OpenConfig.dataNameBuilder = new CustomDataNameBuilder();`
 
 ## 自定义结果处理
 
