--- a/doc/docs/files/10011_项目接入到SOP.md
+++ b/doc/docs/files/10011_项目接入到SOP.md
@@ -6,11 +6,13 @@
 
 ```xml
 <properties>
-    <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
-    <!-- nacos spring cloud版本号 -->
-    <spring-cloud-alibaba-nacos.version>0.9.0.RELEASE</spring-cloud-alibaba-nacos.version>
-    <!-- nacos客户端版本号 -->
-    <nacos-client.version>1.1.3</nacos-client.version>
+    <!-- springboot 版本-->
+    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <!-- spring cloud 版本 -->
+    <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+    <!-- spring cloud alibaba 版本 -->
+    <!-- 具体版本对应关系见：https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
+    <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
 </properties>
 ```
 
@@ -20,9 +22,23 @@
 <dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-dependencies</artifactId>
+            <version>${spring-boot.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-            <version>Greenwich.RELEASE</version>
+            <version>${spring-cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+            <version>${spring-cloud-alibaba.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
@@ -40,28 +56,16 @@
     <version>最新版本</version>
 </dependency>
 
-<!-- 使用nacos注册中心
-    版本 0.2.x.RELEASE 对应的是 Spring Boot 2.x 版本，版本 0.1.x.RELEASE 对应的是 Spring Boot 1.x 版本。
-   https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-alibaba-nacos-discovery
--->
 <dependency>
-    <groupId>org.springframework.cloud</groupId>
+    <groupId>com.alibaba.cloud</groupId>
     <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-    <version>${spring-cloud-alibaba-nacos.version}</version>
 </dependency>
-<dependency>
-    <groupId>com.alibaba.nacos</groupId>
-    <artifactId>nacos-client</artifactId>
-    <version>${nacos-client.version}</version>
-</dependency>
-<!-- 注册中心end -->
 ```
 
 - application.properties配置文件添加
 
 ```properties
 server.port=2222
-# 服务名称
 spring.application.name=story-service
 # nacos注册中心
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
