--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -9,7 +9,7 @@
     1. 修改数据库`username/password`
     2. 指定nacos地址，如果nacos安装在本机则不用改
     3. 运行`SopGatewayApplication.java`
-- 启动微服务：打开`sop-example/sop-story/sop-story-web`下的`application-dev.properties`文件
+- 启动微服务：打开`sop-example/sop-story`下的`application-dev.properties`文件
     1. 指定nacos地址，如果nacos安装在本机则不用改
     2. 运行`SopStoryApplication.java`
 - 找到sop-test，运行`com.gitee.sop.test.AlipayClientPostTest.testGet`进行接口调用测试
