--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -10,7 +10,9 @@ ApiParam apiParam = ServerWebExchangeUtil.getApiParam(exchange);
 ## 微服务端如何获取appId等参数
 
 ```java
-String app_id = request.getParameter("app_id");
+OpenContext openContext = ServiceContext.getCurrentContext().getOpenContext();
+System.out.println("app_id:" + openContext.getAppId());
+System.out.println("token:" + openContext.getAppAuthToken());
 ```
 
 
