--- a/doc/docs/files/10089_自定义校验token.md
+++ b/doc/docs/files/10089_自定义校验token.md
@@ -15,11 +15,10 @@ boolean needToken() default false;
 @ApiOperation(value="传递token", notes = "传递token")
 @Open(value = "story.get.token", needToken = true/* 设置true，网关会校验token是否存在 */)
 @RequestMapping("token")
-public StoryResult token(StoryParam story) {
+public StoryResult token(StoryParam story, HttpServletRequest request) {
     OpenContext openContext = ServiceContext.getCurrentContext().getOpenContext();
-    String appAuthToken = openContext.getAppAuthToken();
     StoryResult result = new StoryResult();
-    result.setName("appAuthToken:" + appAuthToken);
+    result.setName("appAuthToken:" + openContext.getAppAuthToken());
     return result;
 }
 ```
