--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -1,5 +1,7 @@
 # 快速体验
 
+## 方式1
+
 > 运行环境：JDK8，Maven3，[Nacos](https://nacos.io/zh-cn/docs/what-is-nacos.html)，Mysql
 
 - 安装并启动Nacos，[安装教程](https://nacos.io/zh-cn/docs/quick-start.html)
@@ -13,6 +15,20 @@
     1. 指定nacos地址，如果nacos安装在本机则不用改
     2. 运行`SopStoryApplication.java`
 - 找到sop-test，运行`com.gitee.sop.test.AlipayClientPostTest.testGet`进行接口调用测试
+
+## 方式2（docker）
+
+> 前提：安装好docker
+
+- 安装并启动Nacos，[安装教程](https://nacos.io/zh-cn/docs/quick-start.html)
+- 执行Mysql脚本`sop.sql`(Mysql版本5.6+)，5.6以下运行`sop-mysql5.6以下版本.sql`
+- 打开`docker-entrypoint.sh`，修改mysql，nacos地址
+- 执行`docker-build.sh`
+- 找到sop-test，运行`com.gitee.sop.test.AlipayClientPostTest.testGet`进行接口调用测试
+
+
+> admin地址：http://ip:8082/
+> 文档地址：http://ip:8083/
 
 ## 使用admin
 
