--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -22,13 +22,13 @@
 
 - 安装并启动Nacos，[安装教程](https://nacos.io/zh-cn/docs/quick-start.html)
 - 执行Mysql脚本`sop.sql`(Mysql版本5.6+)，5.6以下运行`sop-mysql5.6以下版本.sql`
-- 打开`docker-entrypoint.sh`，修改mysql，nacos地址
+- 打开`docker-entrypoint.sh`，修改mysql，nacos配置
 - 执行`docker-build.sh`
 - 找到sop-test，运行`com.gitee.sop.test.AlipayClientPostTest.testGet`进行接口调用测试
 
 
-> admin地址：http://ip:8082/
-> 文档地址：http://ip:8083/
+> - admin地址：http://ip:8082 登录账号：admin/123456
+> - 文档地址：http://ip:8083/
 
 ## 使用admin
 
