--- a/doc/docs/files/10021_开发流程.md
+++ b/doc/docs/files/10021_开发流程.md
@@ -10,3 +10,11 @@
 - 你的项目接入到SOP，参考[项目接入到SOP](10011_项目接入到SOP.md)，在微服务端开发接口，编写swagger注解文档
 - 接口开发完成，启动微服务，注册到注册中心。
 - 【可选】编写sdk
+
+## ISV对接流程
+
+假设接口开发完毕，开始对接ISV，大致步骤如下：
+
+1. 在admin新建一个ISV，然后`导出秘钥`，文件给到对方
+2. 告知对方接口文档，开始接口调用。
+3. 如果有SDK，把SDK给到对方，让其直接调用
