重构路由监控

--- a/doc/docs/files/10090_路由授权.md
+++ b/doc/docs/files/10090_路由授权.md
@@ -12,9 +12,9 @@
 默认情况下，接口访问时公开的，ISV都能访问。如果要设置某个接口访问权限，在`@Open`注解中指定permission=true。
 如：`@Open(value = "permission.story.get", permission = true)`。这样该接口是需要经过授权给ISV才能访问的。
 
-重启服务后，登录admin，服务管理-路由列表界面中，操作操作列会出现一个授权按钮，点击出现授权窗口，勾选对应的角色即可完成授权。
+重启服务后，登录admin，服务管理-路由列表界面中，`访问权限`列会出现一个点击授权，点击出现授权窗口，勾选对应的角色即可完成授权。
 
-- 点击`授权`按钮，进行角色授权
+- `点击授权`，进行角色授权
 
 ![admin预览](images/10090_1.png "10090_1.png")
 
