--- a/doc/docs/files/10010_快速体验.md
+++ b/doc/docs/files/10010_快速体验.md
@@ -42,11 +42,11 @@
 
 见：`sop-website/sop-portal/README.md`
 
-## 启动文档中心
+## 启动文档中心/ISV后台
 
 文档中心代码在sop-website工程中
 
 - 确保注册中心、网关、微服务正常启动
-- 修改sop-website下的application-dev.properties相关配置
+- 修改sop-website-server下的application-dev.properties相关配置
 - 运行WebsiteServerApplication.java
 - 访问http://localhost:8083
