--- a/doc/docs/files/10021_开发流程.md
+++ b/doc/docs/files/10021_开发流程.md
@@ -9,12 +9,12 @@
 
 - 你的项目接入到SOP，参考[项目接入到SOP](10011_项目接入到SOP.md)，在微服务端开发接口，编写swagger注解文档
 - 接口开发完成，启动微服务，注册到注册中心。
-- 【可选】编写sdk
+- 【可选】编写sdk，在`SDK管理`页发布SDK，提供下载地址
 
 ## ISV对接流程
 
 假设接口开发完毕，开始对接ISV，大致步骤如下：
 
-1. 在admin新建一个ISV，然后`导出秘钥`，文件给到对方
-2. 告知对方接口文档，开始接口调用。
-3. 如果有SDK，把SDK给到对方，让其直接调用
+1. ISV访问门户网站，注册账号并登陆
+2. 上传应用公钥
+3. 如果有SDK，下载SDK，进行接口调用
