--- a/doc/docs/files/10095_SDK开发.md
+++ b/doc/docs/files/10095_SDK开发.md
@@ -333,3 +333,11 @@ private static void TestCommon()
     }
 }
 ```
+
+## 发布SDK
+
+将编写好的SDK打包后上传到云服务器，如百度网盘
+
+前往sop-admin，点击`SDK管理`菜单，点击`发布SDK`，填写SDK语言、版本、下载地址（网盘地址）、调用示例
+
+保存后，ISV端会看到发布的SDK
