--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -1,5 +1,8 @@
 # 常见问题
 
+## Nacos指定group
+
+可在配置文件中添加：`spring.cloud.nacos.discovery.group=xxx`指定group，不加默认是：DEFAULT_GROUP
 
 ## 在SpringCloudGateway中获取请求参数
 
