--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -2,7 +2,7 @@
 
 ## primordials is not defined
 
-node版本太高导致与gulp版本不兼容，解决方法：node退回11版本
+node版本太高导致与gulp版本不兼容，解决方法：node退回11版本。参考https://blog.csdn.net/zxxzxx23/article/details/103000393
 
 ## Nacos指定group
 
