--- a/doc/docs/files/10087_自定义返回结果.md
+++ b/doc/docs/files/10087_自定义返回结果.md
@@ -109,17 +109,7 @@ public class SopGatewayApplication {
 
 ## 不合并结果
 
-如果不希望对结果进行合并，可设置`ApiConfig.getInstance().setMergeResult(false);`
+如果不希望对结果进行合并，可在application.properties中设置`sop.api-config.merge-result=false`
 
-```java
-public class SopGatewayApplication {
-    
-    public static void main(String[] args) {
-        ApiConfig.getInstance().setMergeResult(false);
-        SpringApplication.run(SopGatewayApplication.class, args);
-    }
-
-}
-```
 
 这样，网关最终返回结果即为微服务端的返回结果。
