--- a/doc/docs/files/10110_预发布灰度发布.md
+++ b/doc/docs/files/10110_预发布灰度发布.md
@@ -40,6 +40,14 @@ pre.domain=openpre.domain.com
 
 ## 使用灰度发布
 
+- 灰度接口定义
+
+接口名相同，版本号不同。比如接口`user.get`，version:1.0
+
+新建一个接口`user.get`，version:2.0
+
+那么这个2.0接口就是灰度接口
+
 灰度发布可允许指定的用户访问灰度服务器，其它用户还是走正常流程。
 
 登录SOP-Admin，前往`服务列表`。
