--- a/doc/docs/files/10020_新增接口.md
+++ b/doc/docs/files/10020_新增接口.md
@@ -44,6 +44,8 @@ public StoryResult getStory() {
 
 其中biz_content部分是我们想要的，在方法上申明一个对象，对应biz_content中的内容即可完成参数绑定，并且对参数进行JSR-303校验。
 
+**注意：接口方法必须有且只有一个对象参数，如果申明多个会出现参数绑定失败**
+
 ```java
 @Open("goods.add")
 @RequestMapping("/goods/add")
