--- a/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_en.properties
+++ b/sop-common/sop-gateway-common/src/main/resources/i18n/open/error_en.properties
@@ -1,13 +1,14 @@
-# 网关错误配置
+# \u7F51\u5173\u9519\u8BEF\u914D\u7F6E
 
 open.error_10000=Success
 
-# 格式：前缀 + 网关错误码 + "_"+  子错误码
-# open.error_（前缀）20000（网关错误码）_isp.unknow-error（子错误码）
+# \u683C\u5F0F\uFF1A\u524D\u7F00 + \u7F51\u5173\u9519\u8BEF\u7801 + "_"+  \u5B50\u9519\u8BEF\u7801
+# open.error_\uFF08\u524D\u7F00\uFF0920000\uFF08\u7F51\u5173\u9519\u8BEF\u7801\uFF09_isp.unknow-error\uFF08\u5B50\u9519\u8BEF\u7801\uFF09
 open.error_20000=Service is temporarily unavailable
 open.error_20000_isp.unknown-error=Service is temporarily unavailable
 open.error_20000_aop.unknown-error=Service is temporarily unavailable
 open.error_20000_isp.service-not-available=Service is temporarily unavailable
+open.error_20000_isp.gateway-response-timeout=Gateway response timeout
 open.error_20000_isv.service-busy=service busy
 
 open.error_20001=Insufficient authorization authority
