--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -1,5 +1,13 @@
 # 常见问题
 
+## spring cloud gateway [DataBufferLimitException: Exceeded limit on max bytes to buffer : 262144]
+
+如果POST请求body内容太大可能会报这个错误
+
+- 解决版办法
+
+网关指定配置`spring.codec.max-in-memory-size=xx`，xx默认是262144，即256K（262144=256*1024）
+
 ## primordials is not defined
 
 node版本太高导致与gulp版本不兼容，解决方法：node退回11版本。参考https://blog.csdn.net/zxxzxx23/article/details/103000393
