--- a/doc/docs/files/90100_常见问题.md
+++ b/doc/docs/files/90100_常见问题.md
@@ -1,5 +1,13 @@
 # 常见问题
 
+## Connection has been closed BEFORE send operation
+
+压测时出现`Connection has been closed BEFORE send operation`，`java.nio.channels.ClosedChannelException`之类的错误
+
+- 解决办法
+
+尝试调大内存分配1G或2G，`-Xms1g -Xmx1g`
+
 ## spring cloud gateway [DataBufferLimitException: Exceeded limit on max bytes to buffer : 262144]
 
 如果POST请求body内容太大可能会报这个错误
