--- a/doc/docs/files/10011_项目接入到SOP.md
+++ b/doc/docs/files/10011_项目接入到SOP.md
@@ -6,13 +6,12 @@
 
 ```xml
 <!-- springboot 版本-->
-<spring-boot.version>2.1.8.RELEASE</spring-boot.version>
+<spring-boot.version>2.3.2.RELEASE</spring-boot.version>
 <!-- spring cloud 版本 -->
-<spring-cloud.version>Greenwich.SR6</spring-cloud.version>
+<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 <!-- spring cloud alibaba 版本 -->
 <!-- 具体版本对应关系见：https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E -->
-<spring-cloud-alibaba.version>2.1.2.RELEASE</spring-cloud-alibaba.version>
-
+<spring-cloud-alibaba.version>2.2.5.RELEASE</spring-cloud-alibaba.version>
 ```
 
 - pom.xml添加`<dependencyManagement>`控制版本
